# crcf

./: 404.html  LICENSE  README.md  Readme.md  demo.ipynb  examples.ipynb  index.html  pyproject.toml  setup.py
.github/workflows/: ci.yaml  codecov.yaml
crcf/: __init__.py  crcf.py  forest.py  rule.py  tree.py
docs/: .buildinfo  genindex.html  index.html  mkdocs.yml  objects.inv  py-modindex.html  search.html  searchindex.js
docs/.doctrees/: environment.pickle  index.doctree
docs/.doctrees/.eggs/pytest_runner-4.2-py3.6.egg/EGG-INFO/: DESCRIPTION.doctree
docs/.eggs/pytest_runner-4.2-py3.6.egg/EGG-INFO/: DESCRIPTION.html
docs/_sources/: index.rst.txt
docs/docs/: example.md  getting-started.md  index.md
example/: index.html
getting-started/: index.html
oaforests/: common.py  crcf.py  offline.py  online.py
oiforests/: common.py  liu.py  offline.py
search/: search_index.json
tests/: test_crcf.py  test_forest.py  test_rule.py  test_tree.py
